src/snapshot_middleware/snapshots/librojo__snapshot_middleware__txt__test__with_metadata.snap
---
source: src/snapshot_middleware/txt.rs
expression: instance_snapshot
---
snapshot_id: "00000000000000000000000000000000"
metadata:
  ignore_unknown_instances: false
  glob_ignored_children: false
  instigating_source:
    Path: /foo.txt
  relevant_paths:
    - /foo.txt
    - /foo.meta.json5
  context: {}
  specified_id: manually specified
  middleware: ~
  schema: ~
name: foo
class_name: StringValue
properties:
  Value:
    String: Hello there!
children: []
